// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hash entity type checking should execute the default outputType reducer before a custom outputType reducer  1`] = `
"Entity type check failed!
Expected type: object
Actual type: array
Input value: []"
`;

exports[`Hash entity type checking should throw error from a custom outputType reducer 1`] = `"custom type check failed"`;

exports[`Hash entity type checking should throw error from default outputType reducer when output is not valid 1`] = `
"Entity type check failed!
Expected type: object
Actual type: array
Input value: [ { foo: 1, a: { b: [Object..."
`;
